--- a/teachersday/package.json
+++ b/teachersday/package.json
@@ -20,9 +20,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homgpage": "https://jahwi-0413.github.io/teacher-s-day/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
